--- a/src/components/Container/styles.module.css
+++ b/src/components/Container/styles.module.css
@@ -1,6 +1,7 @@
 .container{
     max-width: 1180px;
+    height:100%;
     margin: 0 auto;
-
+    padding-bottom: 100px;
     margin-bottom: 40px;
   }
