--- a/src/components/Label/styles.module.css
+++ b/src/components/Label/styles.module.css
@@ -3,7 +3,8 @@ label{
     flex-direction: column;
     width: 100%;
     font-weight: bold;
-    padding: 10px;
+    padding: 5px 10px;
     box-sizing: border-box;
+    margin-top:1px;
 
 }
