--- a/src/components/Table/styles.module.css
+++ b/src/components/Table/styles.module.css
@@ -1,9 +1,8 @@
 .tabela {
-    border-radius: 15px;
-    border-collapse: collapse;
-    border: 1px solid #ccc;
+      border-collapse: collapse;
     max-width: 1180px;
     width: 100%;
     margin: 0 auto;
+    font-size: 14px;
     
   }
