--- a/src/components/Tbody/styles.module.css
+++ b/src/components/Tbody/styles.module.css
@@ -2,5 +2,9 @@ tbody > tr:nth-child(2n) {
     background: #fff;
 }
 tbody > tr:nth-child(2n-1) {
-    background: #f9f9f9;
+    background: #f5f6f7;
   }
+
+tbody >  tr:hover{
+    background-color: #dadde1;
+}
