--- a/src/components/Titulo/styles.module.css
+++ b/src/components/Titulo/styles.module.css
@@ -1,12 +1,13 @@
 .titulo{
-    background-color: #aaa;
+    background-color: #000;
     color: #f9f9f9;
     width: 100%;
     display: flex;
     max-width: 1180px;
     margin: 0 auto;
-    padding-left: 5px;
-    font-size: 20px;
+    padding: 5px;
     font-weight: 700;
+    justify-content: space-between;
+    align-items: center;
 
 }
